--- a/wp-content/themes/supersale/css/custom.css
+++ b/wp-content/themes/supersale/css/custom.css
@@ -1220,6 +1220,7 @@ input {
   margin-top: 0;
 }
 .product-item {
+	margin-top:20px;
   text-align: center;
   position: relative;
 }
@@ -4665,3 +4666,8 @@ blockquote {
   }
 }
 /*# sourceMappingURL=custom.css.map */
+
+
+.product-price ins{
+	text-decoration:none;
+}
